Optimize imports, whitespaces